# snow

./: .gitignore  CMakeLists.txt  README.md  generate_solution.bat  snow.sln
src/: CMakeLists.txt
src/snow/: actor.cpp  actor.h  console_renderer.cpp  console_renderer.h  input.h  main.cpp  math.h  types.h
